@@ -1,3 +1,7 @@
+2005-01-29 Bart Hakvoort  <hakvoort@cvs.gnome.org>
+
+	* src/Dialog_Filesystems.cc: Replaced stockitems APPLY and CANCEL with YES and NO.
+
 2005-01-25 Bart Hakvoort  <hakvoort@cvs.gnome.org>
 
 	* src/Frame_Resizer_Base.cc: hmmz, i forgot to remove one unnecessary check.
